<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="account">Account</string>
    <string name="account_info">Info</string>
    <string name="account_info_connection_lost">"We've lost connection to your %1$s account. You will need to reconnect it in order to use it. Sorry for the trouble!"</string>
    <string name="add">Add</string>
    <string name="add_a_message">Add a message... (optional)</string>
    <string name="add_account_category_application">Application</string>
    <string name="add_account_category_calendar">Calendar</string>
    <string name="add_account_facebook">@string/facebook</string>
    <string name="add_account_foursquare">@string/foursquare</string>
    <string name="add_account_google">Google Calendar</string>
    <string name="add_account_google_plus">Google Calendar (Google+)</string>
    <string name="add_account_icloud">iCloud Calendar</string>
    <string name="add_account_linkedin">@string/linkedin</string>
    <string name="add_account_producteev">@string/producteev</string>
    <string name="add_account_twitter">@string/twitter</string>
    <string name="add_event_add_alert">Add Alert</string>
    <string name="add_event_alert">Alert</string>
    <string name="add_event_calendar">Calendar</string>
    <string name="add_event_date_end">End</string>
    <string name="add_event_date_start">Start</string>
    <string name="add_event_description">Description</string>
    <string name="add_event_hint_title">Title</string>
    <string name="add_event_location">Location</string>
    <string name="add_event_people">People</string>
    <string name="add_event_repeat">Repeat</string>
    <string name="add_event_timezone">Time Zone</string>
    <string name="afternoon">Afternoon</string>
    <string name="alarm_reminder_now">%1$s now</string>
    <string name="alert_at_time_of_event">At time of event</string>
    <string name="alert_fifteen_minutes_before">15 minutes before</string>
    <string name="alert_five_minutes_before">5 minutes before</string>
    <string name="alert_none">None</string>
    <string name="alert_one_day_before">1 day before</string>
    <string name="alert_one_hour_before">1 hour before</string>
    <string name="alert_thirty_minutes_before">30 minutes before</string>
    <string name="alert_title">Alert</string>
    <string name="alert_two_days_before">2 days before</string>
    <string name="alert_two_hours_before">2 hours before</string>
    <string name="all_day">ALL DAY</string>
    <string name="all_day_event">All Day Event</string>
    <string name="an_error_occurred_while_linking_icloud_please_try_again">An occurred while linking your iCloud account to Sunrise. Please try again.</string>
    <string name="asana">Asana</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="birthdays">Birthdays</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear">Clear</string>
    <string name="button_connect">Connect</string>
    <string name="button_delete">Delete</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_discard_event">Discard Event</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_disconnect_account">Disconnect Account</string>
    <string name="button_done">Done</string>
    <string name="button_dont_send_notification_email">"Don't Send"</string>
    <string name="button_login">"I'm a Sunrise User"</string>
    <string name="button_next">Next</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_reconnect_account">Reconnect Account</string>
    <string name="button_register">New to Sunrise</string>
    <string name="button_retry">Retry</string>
    <string name="button_save">Save</string>
    <string name="button_send_notification_email">Send</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_signin">Sign In</string>
    <string name="button_yes">Yes</string>
    <string name="calendar_selection_dialog_title">Calendars</string>
    <string name="com.crashlytics.android.build_id">b0c1a929-7308-4554-9641-2c4b688183cd</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="config_authority">am.sunrise.android.calendar</string>
    <string name="email">Email</string>
    <string name="every_day">Every Day</string>
    <string name="every_month">Every Month</string>
    <string name="every_two_weeks">Every 2 Weeks</string>
    <string name="every_week">Every Week</string>
    <string name="every_year">Every Year</string>
    <string name="forever">Forever</string>
    <string name="forgot_apple_id_or_password">Forgot Apple ID or Password?</string>
    <string name="hint_icloud_password">will not be stored</string>
    <string name="hint_icloud_userame">your Apple ID</string>
    <string name="menu_add_event">Add Event</string>
    <string name="menu_inbox_count">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="none">None</string>
    <string name="our_commitment_to_security">Our Commitment to Security</string>
    <string name="password">Password</string>
    <string name="repeat_until">Repeat Until</string>
    <string name="settings">Settings</string>
    <string name="settings_about">About</string>
    <string name="settings_about_feedback_and_support">Feedback &amp; Support</string>
    <string name="settings_about_opensource">Open Source Licenses</string>
    <string name="settings_about_privacy">Privacy</string>
    <string name="settings_about_terms_of_use">Terms of Use</string>
    <string name="settings_accounts">Accounts</string>
    <string name="settings_add_account">Add Account</string>
    <string name="settings_alert_all_day_events">All Day Events</string>
    <string name="settings_alert_birthdays">Birthdays</string>
    <string name="settings_alerts">Alerts</string>
    <string name="settings_background_refresh">Background Refresh</string>
    <string name="settings_background_refresh_title">Synchronize Every</string>
    <string name="settings_default_calendar">Default Calendar</string>
    <string name="settings_more">More</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_preferences">Preferences</string>
    <string name="settings_reminds_me">Reminds me</string>
    <string name="settings_reminds_me_at">Reminds me at</string>
    <string name="settings_signout">Sign Out</string>
    <string name="settings_visible_calendars">Visible Calendars</string>
    <string name="settings_weather">Weather</string>
    <string name="settings_week_start">Week Start</string>
</resources>