<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/recurring_rule_editor_repeat_layout" android:paddingLeft="@dimen/dialog_list_horizontal_margin" android:paddingRight="@dimen/dialog_list_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:background="@drawable/default_card_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dialog_list_vertical_margin" android:layout_marginBottom="@dimen/dialog_list_vertical_margin" android:divider="@drawable/horizontal_divider_light_gray" android:showDividers="middle">
            <am.sunrise.android.calendar.ui.widgets.ObservableCheckedTextView android:textSize="14.0sp" android:textColor="#ff000000" android:ellipsize="end" android:gravity="start|center" android:id="@id/repeat_none" android:background="@drawable/agendaview_item_selector" android:paddingLeft="12.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/none" android:singleLine="true" android:fontFamily="sans-serif" />
            <am.sunrise.android.calendar.ui.widgets.ObservableCheckedTextView android:textSize="14.0sp" android:textColor="#ff000000" android:ellipsize="end" android:gravity="start|center" android:id="@id/repeat_every_day" android:background="@drawable/agendaview_item_selector" android:paddingLeft="12.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/every_day" android:singleLine="true" android:fontFamily="sans-serif" />
            <am.sunrise.android.calendar.ui.widgets.ObservableCheckedTextView android:textSize="14.0sp" android:textColor="#ff000000" android:ellipsize="end" android:gravity="start|center" android:id="@id/repeat_every_week" android:background="@drawable/agendaview_item_selector" android:paddingLeft="12.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/every_week" android:singleLine="true" android:fontFamily="sans-serif" />
            <am.sunrise.android.calendar.ui.widgets.ObservableCheckedTextView android:textSize="14.0sp" android:textColor="#ff000000" android:ellipsize="end" android:gravity="start|center" android:id="@id/repeat_every_two_weeks" android:background="@drawable/agendaview_item_selector" android:paddingLeft="12.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/every_two_weeks" android:singleLine="true" android:fontFamily="sans-serif" />
            <am.sunrise.android.calendar.ui.widgets.ObservableCheckedTextView android:textSize="14.0sp" android:textColor="#ff000000" android:ellipsize="end" android:gravity="start|center" android:id="@id/repeat_every_month" android:background="@drawable/agendaview_item_selector" android:paddingLeft="12.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/every_month" android:singleLine="true" android:fontFamily="sans-serif" />
            <am.sunrise.android.calendar.ui.widgets.ObservableCheckedTextView android:textSize="14.0sp" android:textColor="#ff000000" android:ellipsize="end" android:gravity="start|center" android:id="@id/repeat_every_year" android:background="@drawable/agendaview_item_selector" android:paddingLeft="12.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/every_year" android:singleLine="true" android:fontFamily="sans-serif" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/repeat_until_layout" android:background="@drawable/card_selector" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginBottom="@dimen/dialog_list_vertical_margin">
            <TextView android:textSize="14.0sp" android:textColor="#ff8e8e93" android:gravity="start|center" android:layout_gravity="start|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/repeat_until" android:fontFamily="sans-serif" />
            <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:ellipsize="end" android:gravity="end" android:layout_gravity="center_vertical" android:id="@id/repeat_until" android:paddingLeft="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/forever" android:layout_weight="1.0" android:fontFamily="sans-serif" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>