<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/settings_card_horizontal_margin" android:paddingRight="@dimen/settings_card_horizontal_margin" android:paddingBottom="@dimen/settings_card_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/settings_button_font_size" android:textColor="@color/settings_button_text" android:gravity="center" android:id="@id/account_info_reconnect_account_button" android:background="@drawable/reconnect_button_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/settings_min_row_height" android:layout_marginTop="@dimen/settings_card_vertical_margin" android:text="@string/button_reconnect_account" android:fontFamily="sans-serif" />
    <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/account_info_connection_lost_notice" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_card_vertical_margin" android:text="@string/account_info_connection_lost" android:fontFamily="sans-serif" />
    <TextView android:textSize="@dimen/settings_card_list_section_header_font_size" android:textColor="@color/settings_card_list_section_header_text" android:gravity="start|bottom|center" android:background="@color/settings_card_list_section_header" android:paddingTop="@dimen/settings_card_list_section_header_padding_top" android:paddingBottom="@dimen/settings_card_list_section_header_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_info" android:fontFamily="sans-serif" />
    <LinearLayout android:orientation="horizontal" android:background="@drawable/default_card_background" android:paddingLeft="@dimen/settings_card_horizontal_padding" android:paddingTop="@dimen/settings_card_vertical_padding" android:paddingRight="@dimen/settings_card_horizontal_padding" android:paddingBottom="@dimen/settings_card_vertical_padding" android:layout_width="fill_parent" android:layout_height="@dimen/settings_min_row_height">
        <TextView android:textSize="@dimen/settings_title_font_size" android:textColor="@color/settings_title" android:gravity="start|center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account" android:fontFamily="sans-serif" />
        <TextView android:textSize="@dimen/settings_title_font_size" android:textColor="@color/settings_summary" android:gravity="end|center" android:layout_gravity="center_vertical" android:id="@id/account_info_name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:fontFamily="sans-serif" />
    </LinearLayout>
    <TextView android:textSize="@dimen/settings_button_font_size" android:textColor="@color/settings_button_text" android:gravity="center" android:id="@id/account_info_disconnect_or_delete_account_button" android:background="@drawable/disconnect_button_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/settings_min_row_height" android:layout_marginTop="20.0dip" android:text="@string/button_disconnect_account" android:fontFamily="sans-serif" />
</LinearLayout>