<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/settings_card_horizontal_margin" android:paddingTop="@dimen/settings_card_vertical_margin" android:paddingRight="@dimen/settings_card_horizontal_margin" android:paddingBottom="@dimen/settings_card_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/horizontal_divider_light_gray" android:showDividers="middle">
            <TextView android:textSize="@dimen/settings_title_font_size" android:textColor="@color/settings_title" android:gravity="start|center" android:id="@id/settings_feedback_and_support_button" android:background="@drawable/card_top_selector" android:paddingLeft="@dimen/settings_card_horizontal_padding" android:paddingRight="@dimen/settings_card_horizontal_padding" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/settings_about_feedback_and_support" android:fontFamily="sans-serif" />
            <TextView android:textSize="@dimen/settings_title_font_size" android:textColor="@color/settings_title" android:gravity="start|center" android:id="@id/settings_opensource_button" android:background="@drawable/card_middle_selector" android:paddingLeft="@dimen/settings_card_horizontal_padding" android:paddingRight="@dimen/settings_card_horizontal_padding" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/settings_about_opensource" android:fontFamily="sans-serif" />
            <TextView android:textSize="@dimen/settings_title_font_size" android:textColor="@color/settings_title" android:gravity="start|center" android:id="@id/settings_privacy_button" android:background="@drawable/card_middle_selector" android:paddingLeft="@dimen/settings_card_horizontal_padding" android:paddingRight="@dimen/settings_card_horizontal_padding" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/settings_about_privacy" android:fontFamily="sans-serif" />
            <TextView android:textSize="@dimen/settings_title_font_size" android:textColor="@color/settings_title" android:gravity="start|center" android:id="@id/settings_terms_of_use_button" android:background="@drawable/card_bottom_selector" android:paddingLeft="@dimen/settings_card_horizontal_padding" android:paddingRight="@dimen/settings_card_horizontal_padding" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/settings_about_terms_of_use" android:fontFamily="sans-serif" />
        </LinearLayout>
        <TextView android:textSize="14.0sp" android:textColor="@color/settings_summary" android:gravity="center" android:id="@id/settings_build_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_card_vertical_margin" android:fontFamily="sans-serif" />
    </LinearLayout>
</ScrollView>